@@ -1,5 +1,5 @@
 4.0.0
-    2017-07-18
+    2017-07-20
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * TASK #99: remove support for php versions 5.4 and 5.5
@@ -8,6 +8,8 @@
     * TASK #92: add currency translation and tax recalculation
     * TASK #122: add functional tests for parsing taxClass from TypoScript
     * TASK #123: add zones for shipping method configuration
+    * TASK #125: add font style to all table cells in mail templates and partials
+    * TASK #127: move makeCategorizable to TCA/Overrides configuration
 
 3.12.4
     2017-07-18
